--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -63,7 +63,7 @@ mark_shuiwenzhenji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@mai
 mark_xuanyun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3010.png'
 mark_shoudaowulishanghaijianshao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3011.png'
 mark_shoudaoteshushanghaijianban: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3012.png'
-mark_mingzhongdixia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3013.png'
+mark_mingzhongxiajiang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3013.png'
 mark_yanggong: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3014.png'
 mark_bizhong: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3015.png'
 mark_weilifanbei: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3016.png'
